Add a first post - project 1

--- a/_posts/2019-03-01-Post1.md
+++ b/_posts/2019-03-01-Post1.md
@@ -1,3 +1,4 @@
+---
 title: "Project 1"
 date: 2019-03-01
 tags: [machine learning, data science]
@@ -32,5 +33,6 @@ Python code:
       def sdfsadf
 '''
 
-An image
+An image:
+
 <img src="{{ site.url }}{{ site.baseurl }}/images/LinkedIn_picture.jpg" alt="Some description">
