--- a/_posts/2019-03-01-Post1.md
+++ b/_posts/2019-03-01-Post1.md
@@ -1,7 +1,6 @@
 ---
 layout: post
-title: "Project 1"
-date: 2019-03-01
+title: Project 1
 tags: [machine learning, data science]
 header:
   image: ""
