Add a first post - project 1

--- a/_posts/2019-03-01-Post1.md
+++ b/_posts/2019-03-01-Post1.md
@@ -1,9 +1,9 @@
 ---
-layout: post
-title: Project 1
+title: "Project 1"
+date: 2019-03-01
 tags: [machine learning, data science]
 header:
-  image: ""
+  image: "/images/LinkedIn_picture.jpg"
 excerpt: "Machine Learning, Data Science, Time Series"
 ---
 
